# marketanalysis

marketanalysis/: Makefile  README.md  pyproject.toml  requirements.txt
marketanalysis/marketingcodes/: __init__.py  config.py  dataset.py  features.py  plots.py  rfm.py
marketanalysis/marketingcodes/modeling/: predict.py  train.py
marketanalysis/models/: clustering.py
